--- a/www.nass.gov.ng/2e42359335e885352a35c06c137077b50add1510.yml
+++ b/www.nass.gov.ng/2e42359335e885352a35c06c137077b50add1510.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 16:39:47 GMT
+    - Fri, 23 Mar 2018 09:02:23 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=mxb1EnMM5u4xRUIkEiyD%2C3; path=/
+    - PHPSESSID=01Z86uO3QzTh%2C0Xh5Al7V0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 16:39:47 GMT
+recorded_at: Fri, 23 Mar 2018 09:02:23 GMT
