--- a/www.nass.gov.ng/45a20136eafe7c02a34d78c95ffb3c558ec26832.yml
+++ b/www.nass.gov.ng/45a20136eafe7c02a34d78c95ffb3c558ec26832.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 16:42:31 GMT
+    - Fri, 23 Mar 2018 09:05:07 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=S0SDoS9IcW%2CmIiIL-4bJH2; path=/
+    - PHPSESSID=92WGXu1yBoQFegQHigCEx3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 16:42:32 GMT
+recorded_at: Fri, 23 Mar 2018 09:05:07 GMT
