--- a/www.nass.gov.ng/cb057d7bf7c29d8f9b867c3621a465eb3d122615.yml
+++ b/www.nass.gov.ng/cb057d7bf7c29d8f9b867c3621a465eb3d122615.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 16:44:32 GMT
+    - Fri, 23 Mar 2018 09:08:18 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=4l%2CtX7JChXDWiCnhF225v3; path=/
+    - PHPSESSID=kXxYHUIkU-0M0xI2euwi10; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 16:44:33 GMT
+recorded_at: Fri, 23 Mar 2018 09:08:18 GMT
