--- a/www.nass.gov.ng/4a271fc8b646afe14241c18e67003f16bd21802e.yml
+++ b/www.nass.gov.ng/4a271fc8b646afe14241c18e67003f16bd21802e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 16:46:22 GMT
+    - Fri, 23 Mar 2018 09:10:26 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=h6P9cmlKAO%2CgBbtOltUgH1; path=/
+    - PHPSESSID=V-JrtFtc0ZY8rz9T8UXFB2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 16:46:22 GMT
+recorded_at: Fri, 23 Mar 2018 09:10:26 GMT
