--- a/www.nass.gov.ng/a83953caba9e02a64d6d85c06cf870281388857c.yml
+++ b/www.nass.gov.ng/a83953caba9e02a64d6d85c06cf870281388857c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 16:49:18 GMT
+    - Fri, 23 Mar 2018 09:13:52 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=mLC6lSnJO%2C9I4evIdRPi41; path=/
+    - PHPSESSID=vL6Bw6RgfV6sUu%2CSq%2Cbdo2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 16:49:18 GMT
+recorded_at: Fri, 23 Mar 2018 09:13:53 GMT
