--- a/www.nass.gov.ng/afcea8f052546e3ebb2f6c98c8bd09d3bee9ba66.yml
+++ b/www.nass.gov.ng/afcea8f052546e3ebb2f6c98c8bd09d3bee9ba66.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 16:51:08 GMT
+    - Fri, 23 Mar 2018 09:15:55 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=3EDXdq1IVQN4Fzibovnqs1; path=/
+    - PHPSESSID=rOv1N3Ud5wz-S%2C4geBkit1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 16:51:08 GMT
+recorded_at: Fri, 23 Mar 2018 09:15:56 GMT
