--- a/www.nass.gov.ng/94c3570771f5399a6981a5a77139ac7d70644d3b.yml
+++ b/www.nass.gov.ng/94c3570771f5399a6981a5a77139ac7d70644d3b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 16:52:59 GMT
+    - Fri, 23 Mar 2018 09:17:18 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=e%2CkQAHHK2IAC8Qe9g4ioI3; path=/
+    - PHPSESSID=EQhEN7QmofAH2TBntTOD40; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 16:52:59 GMT
+recorded_at: Fri, 23 Mar 2018 09:17:18 GMT
