--- a/www.nass.gov.ng/2db8738f3d273aef9510c9083d1412331a635e20.yml
+++ b/www.nass.gov.ng/2db8738f3d273aef9510c9083d1412331a635e20.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 16:55:22 GMT
+    - Fri, 23 Mar 2018 09:19:44 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=9erA7EtkrLA%2CzC7u0QHtY1; path=/
+    - PHPSESSID=UdfxG8i2LcTuTQsNA0G8E1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 16:55:22 GMT
+recorded_at: Fri, 23 Mar 2018 09:19:44 GMT
