--- a/www.nass.gov.ng/62457ac9595d6e8193d01b8820d72e7714ec44dd.yml
+++ b/www.nass.gov.ng/62457ac9595d6e8193d01b8820d72e7714ec44dd.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 17:04:13 GMT
+    - Fri, 23 Mar 2018 09:29:16 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=NqZ28t-GhHSzPRHW4G2Wn0; path=/
+    - PHPSESSID=uj0HKMA5BqW2l%2CO%2CUpZ7l3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 17:04:13 GMT
+recorded_at: Fri, 23 Mar 2018 09:29:16 GMT
