--- a/www.nass.gov.ng/519b6c9296ccae7e26e98273a88ecbd32f03a34e.yml
+++ b/www.nass.gov.ng/519b6c9296ccae7e26e98273a88ecbd32f03a34e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 17:04:54 GMT
+    - Fri, 23 Mar 2018 09:30:14 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=e3btxpS8Hp7K%2CLCJpJS5D0; path=/
+    - PHPSESSID=ZNnsph%2CMwxAq%2C1nmmefBZ0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 17:04:54 GMT
+recorded_at: Fri, 23 Mar 2018 09:30:14 GMT
