--- a/www.nass.gov.ng/ebd9a7ce628ff8674703f13ef98e6ed4bb91a9b8.yml
+++ b/www.nass.gov.ng/ebd9a7ce628ff8674703f13ef98e6ed4bb91a9b8.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 17:06:33 GMT
+    - Fri, 23 Mar 2018 09:32:03 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=JB3e-w%2C0tRsDa8Ud24-ZL3; path=/
+    - PHPSESSID=xVVZtJhcqVYj2ZppVV8iX0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 17:06:33 GMT
+recorded_at: Fri, 23 Mar 2018 09:32:03 GMT
