--- a/www.nass.gov.ng/fb32a49cb46f93dfd4988356a4e8243d2c47d1af.yml
+++ b/www.nass.gov.ng/fb32a49cb46f93dfd4988356a4e8243d2c47d1af.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 17:07:29 GMT
+    - Fri, 23 Mar 2018 09:33:38 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Kg-rFx0k7aOL%2CyXlrjVpu3; path=/
+    - PHPSESSID=4cL8kgsSd8LFXFGXdEmZ60; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 17:07:29 GMT
+recorded_at: Fri, 23 Mar 2018 09:33:38 GMT
