--- a/www.nass.gov.ng/ec02f302f341af7f83304fe3b324c2da65f38e64.yml
+++ b/www.nass.gov.ng/ec02f302f341af7f83304fe3b324c2da65f38e64.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 17:08:42 GMT
+    - Fri, 23 Mar 2018 09:35:01 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=8HGy9gTC7nQZXyZj30i9S3; path=/
+    - PHPSESSID=LlZovwuCEEEDpNscAvu%2Cz3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 17:08:42 GMT
+recorded_at: Fri, 23 Mar 2018 09:35:01 GMT
