--- a/www.nass.gov.ng/2288eced1d519bfa35f1d0fd3a0e0b26812d14a4.yml
+++ b/www.nass.gov.ng/2288eced1d519bfa35f1d0fd3a0e0b26812d14a4.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 17:10:18 GMT
+    - Fri, 23 Mar 2018 09:36:17 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=pLF0q3GbSD3k6BkZR%2CbwI3; path=/
+    - PHPSESSID=X1etsH4tmpSX%2ClnHghNTX3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 17:10:18 GMT
+recorded_at: Fri, 23 Mar 2018 09:36:17 GMT
