--- a/www.nass.gov.ng/57d222152199bf7226447ae08bf07ab540c70007.yml
+++ b/www.nass.gov.ng/57d222152199bf7226447ae08bf07ab540c70007.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 17:14:45 GMT
+    - Fri, 23 Mar 2018 09:39:52 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ZFLqQPhhwA6hjseNqN%2CQ03; path=/
+    - PHPSESSID=bXPKH7m47DekJO09sT-vZ2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 17:14:45 GMT
+recorded_at: Fri, 23 Mar 2018 09:39:52 GMT
