--- a/www.nass.gov.ng/8a17050bb4ccd1d83b20e9adad44b98e89ffea6c.yml
+++ b/www.nass.gov.ng/8a17050bb4ccd1d83b20e9adad44b98e89ffea6c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 17:18:10 GMT
+    - Fri, 23 Mar 2018 09:43:40 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Tj2qaqaBW0ObS2E6azbNi2; path=/
+    - PHPSESSID=WbF%2CXVLhJwjOtKXhHvYib0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 17:18:10 GMT
+recorded_at: Fri, 23 Mar 2018 09:43:40 GMT
