--- a/www.nass.gov.ng/e9f593e4653de17f650edee2473f2c77e48b1640.yml
+++ b/www.nass.gov.ng/e9f593e4653de17f650edee2473f2c77e48b1640.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 17:24:06 GMT
+    - Fri, 23 Mar 2018 09:52:17 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=7iB%2Cl4cH5lUvIj-V0Q-dc1; path=/
+    - PHPSESSID=7MyWstHISZb8hI9SnrefA1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 17:24:07 GMT
+recorded_at: Fri, 23 Mar 2018 09:52:17 GMT
