--- a/www.nass.gov.ng/dc2d9fc9a02f9dd8b65b11211e75f2a9e4c99863.yml
+++ b/www.nass.gov.ng/dc2d9fc9a02f9dd8b65b11211e75f2a9e4c99863.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 17:25:42 GMT
+    - Fri, 23 Mar 2018 09:54:12 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=4YCKkVp%2CqS21VZIBLaUoB3; path=/
+    - PHPSESSID=7%2CDxrDnCDcAi3aVL1-I6H1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 17:25:42 GMT
+recorded_at: Fri, 23 Mar 2018 09:54:12 GMT
