--- a/www.nass.gov.ng/3184ac4a329fcdcc4b586b278da87ad06d3dfae1.yml
+++ b/www.nass.gov.ng/3184ac4a329fcdcc4b586b278da87ad06d3dfae1.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 17:26:08 GMT
+    - Fri, 23 Mar 2018 09:54:51 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=sTV1JJ9hmHKnwlLOcXs9s2; path=/
+    - PHPSESSID=fCm%2CyFHmuhkzjZLQeZPbT2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 17:26:08 GMT
+recorded_at: Fri, 23 Mar 2018 09:54:51 GMT
