--- a/www.nass.gov.ng/9bf9e56df2e1ebc8f03f57d13caff2d43a5ef812.yml
+++ b/www.nass.gov.ng/9bf9e56df2e1ebc8f03f57d13caff2d43a5ef812.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 17:26:44 GMT
+    - Fri, 23 Mar 2018 09:55:25 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=bRWfukUeC70e9y748o65O1; path=/
+    - PHPSESSID=j0yBq083%2CowUn-Q8GgP6P0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 17:26:44 GMT
+recorded_at: Fri, 23 Mar 2018 09:55:25 GMT
