--- a/www.nass.gov.ng/13262617d2b017b334ae92b50d8b3d79cb11d0ff.yml
+++ b/www.nass.gov.ng/13262617d2b017b334ae92b50d8b3d79cb11d0ff.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 17:28:30 GMT
+    - Fri, 23 Mar 2018 09:56:42 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=PvNjh2OOtDrlFFP9Ou5Fr3; path=/
+    - PHPSESSID=pTPGfXB1AdvoaM%2CCctoHY2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 17:28:31 GMT
+recorded_at: Fri, 23 Mar 2018 09:56:42 GMT
