--- a/www.nass.gov.ng/ac53673c4d4734657fd2cdb0f447c9ef7d43ac56.yml
+++ b/www.nass.gov.ng/ac53673c4d4734657fd2cdb0f447c9ef7d43ac56.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 17:28:49 GMT
+    - Fri, 23 Mar 2018 09:56:58 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=UJsWJyaM8OBAcbiB0%2CTlv0; path=/
+    - PHPSESSID=hMNJxb62Ey-79qRoLXYvD3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 17:28:49 GMT
+recorded_at: Fri, 23 Mar 2018 09:56:58 GMT
