--- a/www.nass.gov.ng/7add2754d0bc7d3fddaece95e60a7eac8821cccd.yml
+++ b/www.nass.gov.ng/7add2754d0bc7d3fddaece95e60a7eac8821cccd.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 17:33:04 GMT
+    - Fri, 23 Mar 2018 10:01:01 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=%2CKcguircses14OaXzU4pX2; path=/
+    - PHPSESSID=mbdSaQ4RDmXpW1AkKlUw61; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 17:33:04 GMT
+recorded_at: Fri, 23 Mar 2018 10:01:01 GMT
