--- a/www.nass.gov.ng/9d72cdb971135abeff1fd76f9afd94b45f62b734.yml
+++ b/www.nass.gov.ng/9d72cdb971135abeff1fd76f9afd94b45f62b734.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 17:33:21 GMT
+    - Fri, 23 Mar 2018 10:01:19 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=NzS%2CplgK4Cy8%2CXaltvQCC3; path=/
+    - PHPSESSID=Af-kM5LMtPuFKeFTyhsFA3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 17:33:21 GMT
+recorded_at: Fri, 23 Mar 2018 10:01:20 GMT
