--- a/www.nass.gov.ng/adb7ab5d8e4063bb8ea2cb8587d9305ac305ad63.yml
+++ b/www.nass.gov.ng/adb7ab5d8e4063bb8ea2cb8587d9305ac305ad63.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 23 Mar 2018 04:55:06 GMT
+    - Sat, 24 Mar 2018 21:52:48 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=cXBzKQfMEdip5kStb185F0; path=/
+    - PHPSESSID=6m7ceu%2C7yPkbU0Ijn4k9O2; path=/
     Vary:
     - Accept-Encoding
     Content-Type:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 23 Mar 2018 04:55:06 GMT
+recorded_at: Sat, 24 Mar 2018 21:52:48 GMT
