--- a/www.nass.gov.ng/e453cba713abf2acd595ca0c278bf195cede46ef.yml
+++ b/www.nass.gov.ng/e453cba713abf2acd595ca0c278bf195cede46ef.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 23 Mar 2018 05:12:25 GMT
+    - Sat, 24 Mar 2018 22:08:59 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=kbqKqAnR7SpZIy%2C0STIt-2; path=/
+    - PHPSESSID=Y2AbSzHPfY2haZTuE118W0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 23 Mar 2018 05:12:25 GMT
+recorded_at: Sat, 24 Mar 2018 22:08:59 GMT
