--- a/www.nass.gov.ng/20cd9d71c79da05060c8bbd37c2fe5c3b75512b1.yml
+++ b/www.nass.gov.ng/20cd9d71c79da05060c8bbd37c2fe5c3b75512b1.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 23 Mar 2018 05:28:37 GMT
+    - Sat, 24 Mar 2018 22:23:48 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=RBODWUs3Ier8R8lgz1AsM3; path=/
+    - PHPSESSID=O27-drz%2C20djkvjcblcz32; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 23 Mar 2018 05:28:37 GMT
+recorded_at: Sat, 24 Mar 2018 22:23:48 GMT
