--- a/www.nass.gov.ng/3fa8bcddcd701d4398f33bc5fc782be894584cc0.yml
+++ b/www.nass.gov.ng/3fa8bcddcd701d4398f33bc5fc782be894584cc0.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 23 Mar 2018 06:01:20 GMT
+    - Sat, 24 Mar 2018 22:57:56 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=8YL6x%2CGmEvJb4294paSja2; path=/
+    - PHPSESSID=TJxZiF5bD1ebMwbryjLRj0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 23 Mar 2018 06:01:20 GMT
+recorded_at: Sat, 24 Mar 2018 22:57:56 GMT
